examples/test/testpolicy12295.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12295
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key28: value12
      key26: value15
      key39: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value25
          key29: value3
      podSelector:
        matchLabels:
          key10: value5
          key16: value34
